--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "resend": "^4.0.0",
     "@radix-ui/react-toast": "^1.2.15",
     "@tailwindcss/vite": "^4.1.12",
     "class-variance-authority": "^0.7.1",
