--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
   "outputDirectory": "porfolio/dist",
   "framework": "vite",
   "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/((?!api).*)", "destination": "/" }
   ]
 }
